--- a/CodeFiles/batch_A/react days/form-handling/package.json
+++ b/CodeFiles/batch_A/react days/form-handling/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerce-app",
+  "name": "form-handling",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.7",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "bootstrap": "^5.3.7"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
