--- a/CodeFiles/batch_B/react days/routing-app/package.json
+++ b/CodeFiles/batch_B/react days/routing-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerce-app",
+  "name": "routing-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "bootstrap": "^5.3.7"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
